# product-recommendation-agent

./: .env.example  README.md  chainlit.md  chainlit.toml  chainlit.yaml  pyproject.toml  requirement.txt  run_app.sh
config/: agents.py
src/: main.py
src/product_recommendation_agent/: __init__.py  main.py
src/product_recommendation_agent/config/: agents.py  tools.py
