[project]
name = "product-recommendation-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nadeem", email = "nadeemsangrasi903@gmail.com" }
]

entry_point = "src/main.py"

requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "chainlit>=2.4.400",
    "openai-agents==0.0.9",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]